stylus-proc/tests/fail/public/selector_collision_both_explicit.stderr
error[E0080]: evaluation of constant value failed
  --> tests/fail/public/selector_collision_both_explicit.rs:19:8
   |
19 |     fn beta(_x: u64) {}
   |        ^^^^ evaluation panicked: Stylus SDK: ABI selector collision: `alpha` (ABI name `doStuff`) and `beta` (ABI name `doStuff`) produce the same 4-byte selector. Use #[selector(name = "...")] to assign a distinct name, or rename one

error: unreachable pattern
  --> tests/fail/public/selector_collision_both_explicit.rs:19:8
   |
16 |     fn alpha(_x: u64) {}
   |        ----- matches all the relevant values
...
19 |     fn beta(_x: u64) {}
   |        ^^^^ no value can reach this
   |
note: the lint level is defined here
  --> tests/fail/public/selector_collision_both_explicit.rs:13:1
   |
13 | #[public]
   | ^^^^^^^^^
   = note: this error originates in the attribute macro `public` (in Nightly builds, run with -Z macro-backtrace for more info)
